2003-04-03  Bill Haneman <bill.haneman@sun.com>

	* modulesets/gnome24.modules: 
	* modulesets/gnome22.modules:
	remove redundant at-spi entries.

2003-04-02  Biswapesh Chattopadhyay  <biswapesh_chatterjee@tcscal.co.in>

	* modulesets/gnome22.modules: Use gnome-2-2 branch for librsvg
	* modulesets/gnome22.modules: Use gnome22branch for gnome-mime-data

2003-04-02  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* modulesets/gnome24.modules: libcroco is now a librsvg dependency

2003-04-01  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* modulesets/gnome24.modules: add galeon (was only in gnome22.modules)

2003-04-01  Bill Haneman <bill.haneman@sun.com>

	* modulesets/gnome24.modules: remove gnome-2-2 tag
	for atk, gail, and at-spi; 
	(HEAD of these modules is currently gtk+-2.2-compatible).
	* modulesets/gnome22.modules: change gnome-2-0 tag 
	on at-spi to gnome-2-2 tag.

2003-03-31  Alex Duggan  <aldug@astrolinux.com>

	* modulesets/gnome22.modules: use gnome-2-2 branch for 
	for gnome-icon-theme, gnome-vfs, eel, nautilus

2003-03-31  Mikael Hallendal  <micke@codefactory.se>

	* modulesets/gnome22.modules: use gnome-2-2 branch of Yelp

Wed Mar 26 18:06:43 2003  Jonathan Blandford  <jrb@redhat.com>

	* modulesets/gnome24.modules: require gnome-2-2 version of gail.

2003-03-20  Mikael Hallendal  <micke@codefactory.se>

	* modulesets/gnome22.modules: use revision gnome-2-2 of gail.

2003-03-19  Kjartan Maraas  <kmaraas@gnome.org>

	* modulesets/gnome22.modules: This is the janitor. Please
	clean up after yourself. Your mother does not work here.
	
2003-03-17  Kjartan Maraas  <kmaraas@gnome.org>

	* modulesets/gnome22.modules: Added libgsf dep for eog.
	Updated xchat tarball version.
	
2003-03-07  Biswapesh Chattopadhyay  <biswapesh_chatterjee@tcscal.co.in>

	* modulesets/gnome22.modules: Added libzvt, anjuta, gtkhtml,
	evolution, glade3. Updated anjuta2 dependency.
	Added stable gnome-2-2 revisions.

2003-03-07  Havoc Pennington  <hp@pobox.com>
