@@ -1,3 +1,7 @@
+2003-04-11  Mikael Hallendal <micke@codefactory.se>
+
+        * cvs.py: Removed sun runsocks mumbo jumbo... :)
+
 2003-04-03  Bill Haneman <bill.haneman@sun.com>
 
 	* modulesets/gnome24.modules: 
